--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Button</title>
+	<title>Semantic-UI Color Generator</title>
 	<link rel="stylesheet" type="text/css" href="semantic.color.css">
 	<link rel="stylesheet" type="text/css" href="showcase/assets/semantic/semantic.min.css">
 	<script src="showcase/assets/semantic/jquery.min.js"></script>
