--- a/index.html
+++ b/index.html
@@ -663,6 +663,6 @@
 	</footer>
 	</div>
 
-	<script src="docs/assets/js/script.js"></script>
+	<script src="docs/assets/libs/script.js"></script>
 </body>
 </html>
