--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="dist/semantic.color.css">
 	<link rel="stylesheet" type="text/css" href="docs/assets/libs/semantic.min.css">
 	<script src="docs/assets/libs/jquery.min.js"></script>
-  	<script type="text/javascript" src="docs/libs/semantic.min.js"></script>
+  	<script type="text/javascript" src="docs/assets/libs/semantic.min.js"></script>
 	
 </head>
 	<style type="text/css">
